RESOLVED FIXED285398
[GStreamer][WebRTC] webrtc/video-h264.html consistently times out
https://bugs.webkit.org/show_bug.cgi?id=285398
Summary [GStreamer][WebRTC] webrtc/video-h264.html consistently times out
Philippe Normand
Reported 2025-01-05 07:15:23 PST
Caps negotiation error when constrained-high encoding profile is requested.
Attachments
Philippe Normand
Comment 1 2025-01-05 07:24:52 PST
Philippe Normand
Comment 2 2025-01-08 06:38:37 PST
*** Bug 215007 has been marked as a duplicate of this bug. ***
EWS
Comment 3 2025-01-10 05:14:23 PST
Committed 288701@main (85fd6a98f9ec): <https://commits.webkit.org/288701@main> Reviewed commits have been landed. Closing PR #38544 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2025-01-10 05:15:15 PST
Note You need to log in before you can comment on or make changes to this bug.