[GStreamer][WebRTC] webrtc/video-h264.html consistently times out https://bugs.webkit.org/show_bug.cgi?id=285398

Reviewed by Xabier Rodriguez-Calvar.

To make this test pass the two main changes needed were to have support for high and
constrained-high avc codec strings in the packetizer and then let the VideoEncoderPrivate select the
underlying encoder using the output caps. Without this change x264enc was selected due to its high
rank but it doesn't support constrained-high, hence the caps negotiation error. For this test now
openh264enc is selected instead.

Driving-by, the input format handling for h264 was reworked a bit, also removing the inexistant Y420
format.

* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/wpe/TestExpectations:
* Source/WebCore/platform/gstreamer/GStreamerCodecUtilities.cpp:
(WebCore::h264CapsFromCodecString):
* Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:
(videoEncoderSupportsCodec):
(videoEncoderSetCodec):
(webkit_video_encoder_class_init):
(videoEncoderFindForCodec): Deleted.
* Source/WebCore/platform/mediastream/gstreamer/GStreamerVideoRTPPacketizer.cpp:
(WebCore::GStreamerVideoRTPPacketizer::create):

Canonical link: https://commits.webkit.org/288701@main